--- a/app.css
+++ b/app.css
@@ -21,7 +21,7 @@ a {
 
 body {
     font-family: ubuntu;
-    background: url("/background/Dreamscape.jpg") no-repeat;
+    background: url("/Dreamscape.jpg") no-repeat;
     background-size: cover;
 
 }
